[gd_scene load_steps=8 format=3 uid="uid://dgamescene"]

[ext_resource type="Script" path="res://src/core/game_scene.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dp2qeho6e505k" path="res://src/player/player.tscn" id="2"]
[ext_resource type="Script" path="res://src/enemy/spawner/enemy_spawner.gd" id="3"]
[ext_resource type="PackedScene" path="res://src/ui/upgrade_ui/upgrade.tscn" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(50, 50)

[sub_resource type="LabelSettings" id="2"]
font_size = 24

[sub_resource type="LabelSettings" id="3"]
font_size = 18

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Player" parent="." instance=ExtResource("2")]
position = Vector2(1000, 1000)

[node name="Camera2D" type="Camera2D" parent="Player"]
enabled = true
zoom = Vector2(0.8, 0.8)
position_smoothing_enabled = true
position_smoothing_speed = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(0.2, 0.6, 1, 1)
scale = Vector2(0.5, 0.5)

[node name="PlayerLevel" type="Node" parent="Player"]
script = preload("res://src/player/player_level.gd")

[node name="UpgradeManager" type="Node" parent="Player"]
script = preload("res://src/player/upgrade_manager.gd")

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("3")
spawn_margin = 100.0
min_spawn_distance = 150.0
wave_interval = 30.0
enemies_per_wave_base = 10
enemies_per_wave_growth = 1.5
boss_wave_interval = 5

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 40.0
value = 100.0

[node name="XPBar" type="ProgressBar" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 65.0
value = 0.0
modulate = Color(1, 1, 0, 1)

[node name="LevelLabel" type="Label" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 70.0
offset_right = 50.0
offset_bottom = 100.0
text = "Level 1"
label_settings = SubResource("2")
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="UI/HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Wave 1"
label_settings = SubResource("3")

[node name="EnemiesLabel" type="Label" parent="UI/HUD"]
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 80.0
text = "Enemies: 0"
label_settings = SubResource("3")

[node name="UpgradeUI" parent="UI" instance=ExtResource("4")]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
upgrade_manager_path = NodePath("../../Player/UpgradeManager")